Handle authentication failure due to email change or Github nickname change. Fixes #173
- Right now, if a user changes his/her email or Github nickname, he/she can't login.
- This PR tries to fix that issue by finding the user by email if it
  can't find it by nickname
- If a user has changed nickname, then email will be used to find
  the user
- If a user has changed email, nickname will be used to find the
  user
- If a user had changed both, the email and nickname, then a new user
  will be created
- Added uniqueness validation on user's github nickname so that
  database level uniqueness constraint will not throw the exception

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -47,7 +47,7 @@ en:
       send_paranoid_instructions: 'If your account exists, you will receive an email with instructions about how to unlock it in a few minutes.'
     omniauth_callbacks:
       success: 'Successfully authorized from %{kind} account.'
-      failure: 'Could not authorize you from %{kind} because "%{reason}".'
+      failure: 'Could not authorize you from %{kind} because of "%{reason}".'
       bad_email_success: 'The e-mail address in your %{kind} account is not valid. Please set a legitimate one to receive e-mails from us.'
     mailer:
       confirmation_instructions:
